--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "şukelamatik",
-    "description": "şukelamatik"
+    "message": "şükelamatik",
+    "description": "şükelamatik"
   },
   "appDescription": {
-    "message": "ekşi sözlük şukela entry okuyucu",
-    "description": "ekşi sözlük şukela entry okuyucu"
+    "message": "ekşi sözlük şükela entry okuyucu",
+    "description": "ekşi sözlük şükela entry okuyucu"
   }
 }
