--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
     "message": "şükelamatik",
-    "description": "şükelamatik"
+    "description": "Eklenti adı."
   },
   "appDescription": {
     "message": "ekşi sözlük şükela entry okuyucu",
-    "description": "ekşi sözlük şükela entry okuyucu"
+    "description": "Eklenti açıklaması."
   }
 }
